  MySQL needs the constraint type
  in order to emit a DROP CONSTRAINT. #44

- [feature] Added version_table argument to
  EnvironmentContext.configure(), allowing for the
  configuration of the version table name. #34

- [feature] Added support for "relative" migration
  identifiers, i.e. "alembic upgrade +2", 
  "alembic downgrade -1".  Courtesy 
  Atsushi Odagiri for this feature.

0.3.2
=====
- [feature] Basic support for Oracle added, 
  courtesy shgoh. #40

- [feature] Added support for UniqueConstraint
  in autogenerate, courtesy Atsushi Odagiri

- [bug] Fixed support of schema-qualified 
  ForeignKey target in column alter operations,
  courtesy Alexander Kolov.

- [bug] Fixed bug whereby create_unique_constraint()
  would include in the constraint columns that
  are added to all Table objects using events,
  externally to the generation of the constraint.

0.3.1
=====
- [bug] bulk_insert() fixes:

    1. bulk_insert() operation was
       not working most likely since the 0.2 series
       when used with an engine. #41
    2. Repaired bulk_insert() to complete when
       used against a lower-case-t table and executing
       with only one set of parameters, working
       around SQLAlchemy bug #2461 in this regard.
    3. bulk_insert() uses "inline=True" so that phrases
       like RETURNING and such don't get invoked for
       single-row bulk inserts.
    4. bulk_insert() will check that you're passing
       a list of dictionaries in, raises TypeError
       if not detected.

0.3.0
=====
- [general] The focus of 0.3 is to clean up 
  and more fully document the public API of Alembic,
  including better accessors on the MigrationContext
  and ScriptDirectory objects.  Methods that are
  not considered to be public on these objects have
  been underscored, and methods which should be public
  have been cleaned up and documented, including:

    MigrationContext.get_current_revision()
    ScriptDirectory.iterate_revisions()